@@ -1,3 +1,12 @@
+Wed Jun  9 16:09:01 2004  akira yamada  <akira@ruby-lang.org>
+
+	* lib/uri/generic.rb (URI::Generic::merge,
+	  URI::Generic::route_from): accepts non-hierarchical URI.
+	  [ruby-dev:23631]
+	
+	* test/uri/test_generic.rb (TestGeneric::test_route,
+	  TestGeneric::test_merge): added tests for above changes.
+
 Wed Jun  9 15:39:55 2004  Akinori MUSHA  <knu@iDaemons.org>
 
 	* configure.in: Add support for DragonFly BSD.
